mock-data-recipient/mock-data-recipient-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mock-data-recipient
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    kubernetes.io/ingress.class: "addon-http-application-routing"
spec:
#  tls:
#  - hosts:
#      - mock-data-recipient.markhogben.com
#    secretName: mock-data-recipient-tls

  rules:
    - host: mock-data-recipient.markhogben.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mock-data-recipient
                port:
                  number: 9001
